@@ -28,11 +28,11 @@ my $sql = "SELECT COUNT($Q_eprintid) $Q_num_matches," .
 	" AND $Q_event_title LIKE " .
 	$database->quote_value( EPrints::Database::prep_like_value( $q ) . '%' ) .
 	" GROUP BY $Q_event_title" .
-	" ORDER BY $Q_num_matches DESC LIMIT 40";
+	" ORDER BY $Q_num_matches DESC";
 
 my @rows;
 
-my $sth = $session->get_database->prepare( $sql );
+my $sth = $session->get_database->prepare_select( $sql, 'limit' => 40 );
 $session->get_database->execute( $sth , $sql );
 my $first = 1;
 while( my( $n,$title,$location,$dates,$type ) = $sth->fetchrow_array )
