@@ -26,14 +26,14 @@ elsif( $mode eq "prefix" )
 }
 $Q_string_frag = $session->get_database->quote_value( $Q_string_frag );
 
-my $sql = "SELECT $Q_xml from $Q_table WHERE $Q_value LIKE $Q_string_frag LIMIT 40";
+my $sql = "SELECT $Q_xml from $Q_table WHERE $Q_value LIKE $Q_string_frag";
 
 print <<END;
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <ul>
 END
-my $sth = $session->get_database->prepare( $sql );
+my $sth = $session->get_database->prepare_select( $sql, 'limit' => 40 );
 $session->get_database->execute( $sth , $sql );
 my $first = 1;
 while( my( $xml ) = $sth->fetchrow_array )
